--- a/credit_risk_ensemble.ipynb
+++ b/credit_risk_ensemble.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        "[5 rows x 86 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
        "[8 rows x 95 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,9 +693,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'low_risk': 51366, 'high_risk': 246})"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1)\n",
@@ -744,7 +755,10 @@
    ],
    "source": [
     "# Resample the training data with the BalancedRandomForestClassifier\n",
-    "# YOUR CODE HERE"
+    "from imblearn.ensemble import BalancedRandomForestClassifier\n",
+    "\n",
+    "blf = BalancedRandomForestClassifier(random_state=1, n_estimators=100)\n",
+    "blf.fit(X_train, y_train)"
    ]
   },
   {
@@ -765,7 +779,8 @@
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "y_pred = blf.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
@@ -787,7 +802,7 @@
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
@@ -811,7 +826,7 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
@@ -923,7 +938,8 @@
    ],
    "source": [
     "# List the features sorted in descending order by feature importance\n",
-    "# YOUR CODE HERE"
+    "importances = blf.feature_importances_\n",
+    "sorted(zip(importances, X.columns), reverse=True)"
    ]
   },
   {
@@ -951,7 +967,10 @@
    ],
    "source": [
     "# Train the EasyEnsembleClassifier\n",
-    "# YOUR CODE HERE"
+    "from imblearn.ensemble import EasyEnsembleClassifier\n",
+    "\n",
+    "eec = EasyEnsembleClassifier(random_state=1, n_estimators=100)\n",
+    "eec.fit(X_train_scaled, y_train)"
    ]
   },
   {
@@ -972,7 +991,8 @@
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "y_pred = eec.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
@@ -994,7 +1014,7 @@
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
@@ -1018,7 +1038,7 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
