--- a/credit_risk_ensemble.ipynb
+++ b/credit_risk_ensemble.ipynb
@@ -970,7 +970,7 @@
     "from imblearn.ensemble import EasyEnsembleClassifier\n",
     "\n",
     "eec = EasyEnsembleClassifier(random_state=1, n_estimators=100)\n",
-    "eec.fit(X_train_scaled, y_train)"
+    "eec.fit(X_train, y_train)"
    ]
   },
   {
